--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <a href="index.html" class="text-primary font-semibold">Home</a>
         <a href="about.html" class="hover:text-primary">About</a>
         <a href="services.html" class="hover:text-primary">Services</a>
-        <!-- <a href="contact.html" class="hover:text-primary">Contact</a> -->
+        <a href="gallery.html" class="hover:text-primary">Gallery</a>
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -123,6 +123,7 @@
       <a href="index.html" class="block text-primary font-semibold">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-primary">About</a>
       <a href="services.html" class="block text-gray-800 hover:text-primary">Services</a>
+      <a href="gallery.html" class="block text-gray-800 hover:text-primary">Gallery</a>
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
@@ -277,7 +278,7 @@
     <div class="flex flex-col justify-start md:mt-0 mt-6">
       <p class="text-md md:text-lg text-white mb-6 mt-6 md:mt-56 leading-relaxed">
         <span class="text-4xl md:text-6xl ">We</span>
- specialize in reliable and efficient cargo movement by air, sea, and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, heavy machinery, seafood , vegetables and various products across the globe.      </p>
+ specialize in reliable and efficient cargo movement by air, sea and road. With years of experience in international logistics, we ensure seamless delivery of garments, spices, FMCG products, heavy machinery, seafood , vegetables and various products across the globe.      </p>
       <a href="about.html">
         <button class="bg-[#F0C479] hover:bg-[#F0C479] text-[#005EB8] font-semibold px-6 py-3 rounded shadow-md transition-transform transform hover:scale-105 w-fit">
           Know Now
@@ -306,7 +307,7 @@
         </div>
         <div class="w-full sm:w-1/2 p-6 flex flex-col justify-center px-10">
           <h3 class="text-2xl font-bold text-white mb-6">Freight Forwarding</h3>
-          <p class="text-gray-200 mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
+          <p class="text-gray-200 mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents and cargo flow.</p>
           <a href="services.html" class="text-[#F0C479] font-medium hover:underline">Learn More</a>
         </div>
       </div>
@@ -342,7 +343,7 @@
       Trusted Experts in the Field
     </h2>
     <p class="text-gray-600 text-lg max-w-2xl mx-auto">
-Comprehensive logistics for all kinds of products — delivered safely, every time.    </p>
+Comprehensive logistics for all kinds of products - delivered safely, every time.    </p>
   </div>
 
   <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
@@ -388,7 +389,7 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M18.7 4.6c-1.1-.3-2.3.3-3.3 1.3c-.9.9-1.6 2.1-2 3.2c-1.2-.5-2.3-1.2-3.2-2.1c-.9-.9-1.5-2-1.8-3.1c0 0-4.5 3.4-4.2 7.6c.2 2.3 1.6 4.6 3.6 6c1.9 1.4 4.2 1.8 6.3 1.2c2.6-.7 5.6-3.2 6.6-5.2c1.2-2.3 1-7.3-2-8.9zm-4.6 6.9c.3-.9.9-1.8 1.6-2.5c.4-.4.8-.6 1.2-.8c.2.4.3.9.3 1.5c0 .8-.2 1.6-.7 2.2c-.4.7-1.2 1.4-2.4 1.9c0-.8 0-1.5 0-2.3zm2.2 6c-.6.2-1.2-.1-1.5-.7s.1-1.2.7-1.5s1.2.1 1.5.7c.2.6-.1 1.3-.7 1.5z"/></svg>
     </div>
     <h3 class="text-xl font-semibold text-gray-800">Seafood</h3>
-    <p class="text-gray-600">Fresh, chilled, and safe seafood delivery.</p>
+    <p class="text-gray-600">Fresh, chilled and safe seafood delivery.</p>
   </div>
 </div>
 
@@ -438,7 +439,7 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
       <div class="relative">
         <div class="absolute w-4 h-4 bg-[#F0C479] rounded-full -left-6 top-2"></div>
         <h3 class="text-xl font-semibold text-[#005EB8]">Step 2: Planning with Precision</h3>
-        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget and timeline — using innovative tools and real-time data.</p>
+        <p class="text-gray-700 mt-2">Our experts design customized logistics strategies to match your scale, budget and timeline - using innovative tools and real-time data.</p>
       </div>
 
       <!-- Step 3 -->
@@ -469,7 +470,7 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
     
     <div>
       <h2 class="text-2xl font-bold mb-2">EVS</h2>
-      <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
+      <p>We simplify cargo, import/export and logistics operations worldwide with efficiency and care.</p>
     </div>
 
     <div>
@@ -487,6 +488,11 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
     <i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">See What We Offer</span>
   </li>
+  <li class="relative group">
+  <i class="fas fa-angle-right mr-2"></i><a href="gallery.html">Gallery</a>
+  <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Explore Our Company</span>
+</li>
+
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Get in Touch</span>
