--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="hover:text-[#005EB8]">About</a>
         <a href="services.html" class="text-[#005EB8] font-semibold">Services</a>
-        <!-- <a href="contact.html" class="hover:text-[#005EB8]">Contact</a> -->
+        <a href="gallery.html" class="hover:text-primary">Gallery</a>
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -87,7 +87,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-[#005EB8]">About</a>
       <a href="services.html" class="block text-[#005EB8] font-semibold">Services</a>
-      <!-- <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a> -->
+      <a href="gallery.html" class="block text-gray-800 hover:text-primary">Gallery</a>
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
@@ -157,7 +157,7 @@
         </div>
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Warehouse Handling</h3>
-          <p class="text-gray-600 text-sm mb-4">We offer modern warehousing with inventory control, storage solutions, and safe handling for every shipment.</p>
+          <p class="text-gray-600 text-sm mb-4">We offer modern warehousing with inventory control, storage solutions and safe handling for every shipment.</p>
           <button onclick="openModal('modal3')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
@@ -168,7 +168,7 @@
         </div>
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Freight Forwarding</h3>
-          <p class="text-gray-600 text-sm mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
+          <p class="text-gray-600 text-sm mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents and cargo flow.</p>
           <button onclick="openModal('modal4')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
@@ -204,7 +204,7 @@
     </div>
     <div class="p-6 text-left">
       <h3 class="text-lg font-semibold mb-2">Project Management</h3>
-      <p class="text-gray-600 text-sm mb-4">From planning to execution, we manage logistics projects of any scale with precision, safety, and timely delivery.</p>
+      <p class="text-gray-600 text-sm mb-4">From planning to execution, we manage logistics projects of any scale with precision, safety and timely delivery.</p>
       <button onclick="openModal('modal7')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
     </div>
   </div>
@@ -232,7 +232,7 @@
     </div>
     <div class="p-6 text-left">
       <h3 class="text-lg font-semibold mb-2">Relocation Services</h3>
-      <p class="text-gray-600 text-sm mb-4">We provide hassle-free domestic and international relocation with secure packing, transport, and delivery.</p>
+      <p class="text-gray-600 text-sm mb-4">We provide hassle-free domestic and international relocation with secure packing, transport and delivery.</p>
       <button onclick="openModal('modal9')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
     </div>
   </div>
@@ -244,7 +244,7 @@
   </div>
   <div class="p-6 text-left">
     <h3 class="text-lg font-semibold mb-2">Duty drawback clearance</h3>
-    <p class="text-gray-600 text-sm mb-4">We handle Duty drawback clearance efficiently—managing refund processes for previously paid duties on qualified exports.</p>
+    <p class="text-gray-600 text-sm mb-4">We handle Duty drawback clearance efficiently-managing refund processes for previously paid duties on qualified exports.</p>
     <button onclick="openModal('modal10')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
   </div>
 </div>
@@ -279,7 +279,7 @@
   <div id="modal3" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
     <div class="bg-white p-8 rounded w-full max-w-md">
       <h2 class="text-2xl font-bold mb-4">Warehouse Handling</h2>
-      <p class="text-gray-700 text-sm mb-4">We provide storage solutions with real-time tracking, inventory management, and flexible space options.</p>
+      <p class="text-gray-700 text-sm mb-4">We provide storage solutions with real-time tracking, inventory management and flexible space options.</p>
       <button onclick="closeModal('modal3')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
@@ -304,7 +304,7 @@
   <div class="bg-white p-8 rounded w-full max-w-md">
     <h2 class="text-2xl font-bold mb-4">Supply Chain Solutions</h2>
     <p class="text-gray-700 text-sm mb-4">
-      We offer end-to-end supply chain solutions that optimize procurement, warehousing, distribution, and inventory management — designed to improve efficiency and reduce operational costs.
+      We offer end-to-end supply chain solutions that optimize procurement, warehousing, distribution and inventory management - designed to improve efficiency and reduce operational costs.
     </p>
     <button onclick="closeModal('modal6')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -315,7 +315,7 @@
   <div class="bg-white p-8 rounded w-full max-w-md">
     <h2 class="text-2xl font-bold mb-4">Project Management</h2>
     <p class="text-gray-700 text-sm mb-4">
-      Our expert team ensures the successful execution of logistics projects through effective planning, coordination, and resource management — from initial concept to final delivery.
+      Our expert team ensures the successful execution of logistics projects through effective planning, coordination and resource management - from initial concept to final delivery.
     </p>
     <button onclick="closeModal('modal7')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -326,7 +326,7 @@
   <div class="bg-white p-8 rounded w-full max-w-md">
     <h2 class="text-2xl font-bold mb-4">CustomS Consultation</h2>
     <p class="text-gray-700 text-sm mb-4">
-      Our custom consultation services are crafted to suit your logistics goals. From analyzing workflows to creating smart strategies, we provide expert advice to help you reduce costs, improve operations, and scale confidently.
+      Our custom consultation services are crafted to suit your logistics goals. From analyzing workflows to creating smart strategies, we provide expert advice to help you reduce costs, improve operations and scale confidently.
     </p>
     <button onclick="closeModal('modal8')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -338,7 +338,7 @@
   <div class="bg-white p-8 rounded w-full max-w-md">
     <h2 class="text-2xl font-bold mb-4">Relocation Services</h2>
     <p class="text-gray-700 text-sm mb-4">
-      We manage complete relocation logistics for individuals and businesses — including packing, secure transport, customs clearance, and doorstep delivery — with minimal disruption.
+      We manage complete relocation logistics for individuals and businesses - including packing, secure transport, customs clearance and doorstep delivery - with minimal disruption.
     </p>
     <button onclick="closeModal('modal9')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -350,7 +350,7 @@
   <div class="bg-white p-8 rounded w-full max-w-md">
     <h2 class="text-2xl font-bold mb-4">Duty drawback clearance</h2>
     <p class="text-gray-700 text-sm mb-4">
-      We handle Duty drawback clearance services with precision—ensuring accurate documentation, smooth processing, and timely refunds of duties paid on imported goods as per applicable policies.
+      We handle Duty drawback clearance services with precision-ensuring accurate documentation, smooth processing and timely refunds of duties paid on imported goods as per applicable policies.
     </p>
     <button onclick="closeModal('modal10')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -379,7 +379,7 @@
     
     <div>
       <h2 class="text-2xl font-bold mb-2">EVS</h2>
-      <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
+      <p>We simplify cargo, import/export and logistics operations worldwide with efficiency and care.</p>
     </div>
 
     <div>
@@ -397,6 +397,10 @@
     <i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">See What We Offer</span>
   </li>
+   <li class="relative group">
+  <i class="fas fa-angle-right mr-2"></i><a href="gallery.html">Gallery</a>
+  <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Explore Our Company</span>
+</li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Get in Touch</span>
