--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="hover:text-[#005EB8]">About</a>
         <a href="services.html" class="hover:text-[#005EB8]">Services</a>
-        <!-- <a href="contact.html" class="text-[#005EB8] font-semibold">Contact</a> -->
+        <a href="gallery.html" class="hover:text-primary">Gallery</a>
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -86,7 +86,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-[#005EB8]">About</a>
       <a href="services.html" class="block text-gray-800 hover:text-[#005EB8]">Services</a>
-      <!-- <a href="contact.html" class="block text-[#005EB8] font-semibold">Contact</a> -->
+      <a href="gallery.html" class="block text-gray-800 hover:text-primary">Gallery</a>
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
@@ -177,7 +177,7 @@
     
     <div>
       <h2 class="text-2xl font-bold mb-2">EVS</h2>
-      <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
+      <p>We simplify cargo, import/export and logistics operations worldwide with efficiency and care.</p>
     </div>
 
     <div>
@@ -195,6 +195,10 @@
     <i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">See What We Offer</span>
   </li>
+   <li class="relative group">
+  <i class="fas fa-angle-right mr-2"></i><a href="gallery.html">Gallery</a>
+  <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Explore Our Company</span>
+</li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Get in Touch</span>
