--- a/services2.html
+++ b/services2.html
@@ -73,7 +73,7 @@
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
         <a href="about.html" class="hover:text-[#005EB8]">About</a>
         <a href="services.html" class="text-[#005EB8] font-semibold">Services</a>
-        <!-- <a href="contact.html" class="hover:text-[#005EB8]">Contact</a> -->
+        <a href="gallery.html" class="hover:text-primary">Gallery</a>
       </nav>
       <a href="contact.html" class="bg-accent text-white px-4 py-2 rounded hover:brightness-110 transition">Contact Now</a>
     </div>
@@ -86,7 +86,7 @@
       <a href="index.html" class="block text-gray-800 hover:text-[#005EB8]">Home</a>
       <a href="about.html" class="block text-gray-800 hover:text-[#005EB8]">About</a>
       <a href="services.html" class="block text-[#005EB8] font-semibold">Services</a>
-      <!-- <a href="contact.html" class="block text-gray-800 hover:text-[#005EB8]">Contact</a> -->
+      <a href="gallery.html" class="block text-gray-800 hover:text-primary">Gallery</a>
       <a href="contact.html" class="block bg-accent text-white text-center py-2 rounded hover:brightness-110">Contact Now</a>
     </div>
   </div>
@@ -120,15 +120,7 @@
 
 
 <section class="bg-gray-50 py-16 px-6">
-<<<<<<< HEAD
 
-
-
-
-
-
-=======
->>>>>>> ad2782295863dadd66ee426f05e3d2ca734c2a38
   <div class="max-w-7xl mx-auto text-center">
     <p class="text-[#031A4C] uppercase tracking-widest mb-2 inline-block">What We Offer</p>
     <div class="w-20 h-[2px] bg-[#F0C479] mb-6 mx-auto"></div>
@@ -151,7 +143,7 @@
       <div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
         <h3 class="text-3xl font-semibold mb-4">Multimodal Transportation</h3>
         <p class="text-sm mb-4 leading-relaxed">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
-        <p class="text-sm leading-relaxed">We offer door-to-door logistics, tracking, and route optimization for every delivery need.</p>
+        <p class="text-sm leading-relaxed">We offer door-to-door logistics, tracking and route optimization for every delivery need.</p>
       </div>
       <div class="md:col-span-4 order-1 md:order-2">
         <img src="./static/images/transportation.jpg" alt="Transportation" class="rounded-lg shadow-lg w-full h-auto" />
@@ -165,7 +157,7 @@
       </div>
       <div class="md:col-span-8 bg-[#005EB8] text-white p-10 rounded-lg clip-polygon-right text-left">
         <h3 class="text-3xl font-semibold mb-4">Warehouse Handling</h3>
-        <p class="text-sm mb-4 leading-relaxed">We offer modern warehousing with inventory control, storage solutions, and safe handling for every shipment.</p>
+        <p class="text-sm mb-4 leading-relaxed">We offer modern warehousing with inventory control, storage solutions and safe handling for every shipment.</p>
         <p class="text-sm leading-relaxed">Flexible storage options ensure optimal space utilization and secure environment for all cargo types.</p>
       </div>
     </div>
@@ -174,8 +166,8 @@
     <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
       <div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
         <h3 class="text-3xl font-semibold mb-4">Freight Forwarding</h3>
-        <p class="text-sm mb-4 leading-relaxed">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
-        <p class="text-sm leading-relaxed">From planning to delivery, our team ensures timely, cost-efficient, and smooth freight movement worldwide.</p>
+        <p class="text-sm mb-4 leading-relaxed">We coordinate complete freight solutions across land and sea, managing logistics, documents and cargo flow.</p>
+        <p class="text-sm leading-relaxed">From planning to delivery, our team ensures timely, cost-efficient and smooth freight movement worldwide.</p>
       </div>
       <div class="md:col-span-4 order-1 md:order-2">
         <img src="./static/images/freight.jpg" alt="Freight Forwarding" class="rounded-lg shadow-lg w-full h-auto" />
@@ -217,7 +209,7 @@
     
     <div>
       <h2 class="text-2xl font-bold mb-2">EVS</h2>
-      <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
+      <p>We simplify cargo, import/export and logistics operations worldwide with efficiency and care.</p>
     </div>
 
     <div>
@@ -235,6 +227,10 @@
     <i class="fas fa-angle-right mr-2"></i><a href="services.html">Services</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">See What We Offer</span>
   </li>
+   <li class="relative group">
+  <i class="fas fa-angle-right mr-2"></i><a href="gallery.html">Gallery</a>
+  <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Explore Our Company</span>
+</li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i><a href="contact.html">Contact</a>
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Get in Touch</span>
